# SoloCore

./: .gitignore  .gitmodules  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md
textloom/: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  .secrets.baseline  BUSINESS_TEST_GUIDE.md  CLAUDE.md  EDITLY_QUICKSTART.md  README.md  TESTING_GUIDE.md  business_e2e_test.py  celery_config.py  config.py  init_db.py  main.py  pyproject.toml  pytest.ini  requirements-security.txt  requirements.txt  run_migration_tests.sh  start_all_services.sh  start_celery_worker.sh  stop_all.sh  test_config.bat  test_config.sh  test_editly_engine.py
textloom/.github/: dependabot.yml
textloom/.github/workflows/: cd.yml  ci.yml  dependency-update.yml  release.yml  saas-deployment.yml  security-scan.yml  security.yml
textloom/alembic/: env.py
textloom/alembic/versions/: 30aa2810635a_use_bigint_for_course_media_id_on_tasks_.py  3737e96ea445_add_context_fields_to_media_items.py  45514711ce40_remove_sub_video_tasks_table.py  82592e0a0570_add_media_items_resolution.py  8b9d6ff77653_sync_models_to_db.py  8f1c2d9a7b21_add_thumbnail_duration_to_sub_video_tasks.py  ab1756f34899_sync_models_to_db_textloom_core_only.py  b15222e11ab9_add_performance_indexes_for_core_tables.py  b50e8fba3c88_add_original_url_field_to_material_.py  b7e36c1ff1a7_add_download_and_upload_status_fields_.py  bb0347984f23_remove_multi_video_fields_from_tasks_.py  c9c7a666f577_add_sub_video_tasks_columns_for_two_.py  da536ca717f2_add_api_key_support_to_users_table.py  f90ca5d807de_add_current_stage_to_tasks.py
textloom/docker/: Dockerfile.api  Dockerfile.scheduler  Dockerfile.worker  README.md
textloom/docker/backup/: backup-crontab  backup-entrypoint.sh  backup-healthcheck.sh  backup-supervisor.conf
textloom/docker/compose/: docker-compose.backup.yml  docker-compose.optimized.yml  docker-compose.yml
textloom/docker/dockerfiles/: Dockerfile
textloom/docs/: API_DOCUMENTATION.md  API_THIRD_PARTY.md  EDITLY_INTEGRATION_GUIDE.md  IMPLEMENTATION_ROADMAP.md  README.md  TESTING_CONFIG.md  TEXTLOOM_BUSINESS_ANALYSIS_REPORT.md  dynamic_subtitles.md  dynamic_subtitles_architecture.md  task_consistency_management.md  视频生成请求示例.txt
textloom/docs/architecture/: ARCHITECTURE_REVIEW_FINDINGS.md  (+2 more)
textloom/models/: __init__.py  auth_models.py  celery_db.py  database.py  db_connection.py  db_models.py  material_analysis.py  prompt_template.py  script_generation.py  task.py  video_generation.py  video_merge.py  video_project.py
textloom/processors/: __init__.py  sync_material_analyzer.py  sync_material_processor.py
textloom/routers/: __init__.py  auth.py  dynamic_subtitles.py  internal_analyzer.py  internal_materials.py  internal_script.py  internal_video.py  personas.py  secure_tasks.py  tasks.py
textloom/scripts/: auto_type_improver.py  backup_manager.py  backup_monitor.py  backup_scheduler.sh  create_superuser.py  db_connection_optimizer.py  db_pool_monitor.py  dependency_updater.py  deploy_security_updates.py  deployment-check.sh  disaster_recovery.py  enhanced_type_checker.py  fix_indentation.py  healthcheck.sh  print_to_logging_converter.py  quick_fix_orphaned_tasks.py  run_type_checks.sh  security_automation.sh  security_scan.py  setup_backup_system.py  setup_editly.bat  setup_editly.sh  task_cleanup.py  test_cors_security.py  test_db_config.py  type_check_analyzer.py  type_checker.py  verify_index_migration.py  verify_security_fixes.py
textloom/services/: edge_tts_service.py  editly_config_converter.py  editly_video_engine.py  pycaps_converter.py  pycaps_subtitle_service.py  sync_script_generator.py  sync_task_processor.py  sync_video_generator.py  token_service.py  user_service.py
textloom/sql/: init_database.py  performance_validation.sql  数据库管理说明.md
textloom/tasks/: __init__.py  dynamic_subtitle_tasks.py  video_merge_polling.py  video_processing_tasks.py
textloom/tests/: __init__.py  conftest.py  test_celery_integration.py  test_editly_integration_e2e.py  test_internal_analyzer_api.py  test_internal_materials_api.py  test_jwt_auth.py  test_sync_clients.py  test_sync_database.py  test_sync_material_analyzer.py  test_sync_material_processor.py  test_sync_script_generator.py  test_sync_task_processor.py  test_sync_video_generator.py
textloom/tools/: performance_validator.py  simple_performance_test.py  sleep_optimizer.py
textloom/utils/: api_key_auth.py  async_sleep_detector.py  auth.py  auth_middleware.py  enhanced_logging.py  jwt_auth.py  redis_cleanup.py  storage_utils.py  sync_clients.py  sync_logging.py  task_validation.py  web_configs.py
(+193 files in other folders)
