[project]
name = "textloom"
version = "0.1.0"
description = "TextLoom API - 基于FastAPI的现代化Web应用程序"
authors = [
    {name = "TextLoom Team", email = "team@textloom.com"}
]
readme = "README.md"
# Python 版本限制说明:
# - 最低: 3.11 (FastAPI、SQLAlchemy 等依赖需求)
# - 最高: <3.13 (pydantic 2.4.2 依赖的 pydantic-core 2.10.1 在 Python 3.13 上编译失败)
# - 推荐: 3.11 或 3.12
# - 如需支持 Python 3.13，请升级 pydantic 到 2.9+ 版本
requires-python = ">=3.11,<3.13"
dependencies = [
    "fastapi>=0.109.1",
    "uvicorn[standard]>=0.24.0",
    "python-jose[cryptography]>=3.4.0",
    "pyjwt[crypto]>=2.8.0",
    # 注意: ecdsa 包存在 Minerva timing attack 漏洞 (CVE-2024-23342)
    # 但官方认为侧信道攻击超出项目范围，没有计划修复
    # 建议在生产环境中谨慎使用 ECDSA 签名
    "passlib[bcrypt]==1.7.4",
    "python-multipart>=0.0.18",
    "pydantic==2.4.2",
    "pydantic-settings==2.1.0",
    "email-validator==2.1.0.post1",
    "requests>=2.31.0",
    "httpx[socks]==0.25.2",
    "aiohttp>=3.9.0",
    "pillow>=11.2.1",
    "opencv-python-headless>=4.11.0.86",
    "boto3>=1.38.46",
    "google-cloud-storage>=3.1.1",
    "openai>=1.93.0",
    "esdk-obs-python>=3.25.3",
    "minio>=7.2.15",
    "google-generativeai>=0.3.2",
    # Task queue and message broker
    "celery[redis]>=5.3.4",
    "redis>=5.0.1",
    "flower>=2.0.1",
    # 数据库相关依赖
    "sqlalchemy[asyncio]>=2.0.23",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "supabase>=2.4.0",
    "psycopg2-binary>=2.9.10",
    "playwright>=1.54.0",
    "psutil>=7.0.0",
    "aiofiles>=24.1.0",
    "opencv-python>=4.12.0.88",
    "black>=25.1.0",
    "isort>=6.0.1",
    "flake8>=7.3.0",
    "deadcode>=2.4.1",
    "vulture>=2.14",
    # PyCaps 相关依赖
    "typer>=0.9.0",
    "multiprocess>=0.70.0",
    "pywebview>=5.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "httpx==0.25.2",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["models", "routers"]
include = [
    "main.py",
    "config.py",
    ".env.example"
]

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["models", "routers"]

[tool.mypy]
python_version = "3.11"
# 基础警告设置
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

# 类型检查严格性
disallow_untyped_defs = false  # 渐进式开启
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = false  # 渐进式开启
no_implicit_optional = true
strict_optional = true

# 错误处理
show_error_codes = true
show_column_numbers = true
show_error_context = true
color_output = true

# 导入处理
ignore_missing_imports = true
follow_imports = "normal"
namespace_packages = true

# 缓存
cache_dir = ".mypy_cache"
sqlite_cache = true

# 排除第三方包
exclude = [
    "alembic/",
    "venv/",
    ".venv/",
    "build/",
    "dist/",
    "__pycache__/",
    "workspace/",
    "logs/",
    "test/",
]

# 允许的错误类型 - 渐进式类型检查
[[tool.mypy.overrides]]
module = [
    "celery_config",
    "scripts.*",
    "tasks.*",
    "tests.*",
]
ignore_errors = false
disallow_untyped_defs = false

# FastAPI相关模块配置
[[tool.mypy.overrides]]
module = "routers.*"
ignore_missing_imports = true
disallow_untyped_defs = false  # 先关闭，逐步改进

# SQLAlchemy 特殊处理
[[tool.mypy.overrides]]
module = "models.db_models"
ignore_errors = true

# 严格检查的核心模块
[[tool.mypy.overrides]]
module = [
    "models.auth_models",
    "models.task",
    "models.video_generation", 
    "utils.*", 
    "services.*",
]
disallow_untyped_defs = true
strict = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = [
    "tests",
]
filterwarnings = [
    "error",
    "ignore::UserWarning",
    "ignore::DeprecationWarning",
] 


[dependency-groups]
dev = [
    "bandit>=1.8.6",
    "detect-secrets>=1.5.0",
    "mypy>=1.17.0",
    "packaging>=25.0",
    "pip-audit>=2.9.0",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "pytest-mock>=3.14.1",
    "requests>=2.32.4",
    "safety>=3.2.4",
    "semgrep>=1.132.1",
    "tomli>=2.0.2",
    "types-redis>=4.6.0.20241004",
    "types-requests>=2.32.4.20250809",
]
